# formation_ws

./: .gitignore  README.md
src/formation/src/: CMakeLists.txt  formation_log.txt  main.cpp  uav_node.cpp  uav_node.h
src/formation/src/Formation_FMS/: CMakeLists.txt  FMS.h
src/formation/src/Formation_FMS/lib/: Formation_FMS.cpp  Formation_FMS.h  Formation_FMS_data.cpp  Formation_FMS_private.h  Formation_FMS_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp
src/formation/src/lib/: CMakeLists.txt
src/formation/src/lib/Controller/: Lateral_Longitudinal_Control.cpp  Lateral_Longitudinal_Control.h  Lateral_Longitudinal_Control_private.h  Lateral_Longitudinal_Control_types.h  rtwtypes.h
src/formation/src/lib/FMS_TECS/: FMS.h
src/formation/src/lib/FMS_TECS/src/: FMS_TECS.cpp  FMS_TECS.h  FMS_TECS_private.h  FMS_TECS_types.h  Formation_FMS.cpp  Formation_FMS.h  Formation_FMS_private.h  Formation_FMS_types.h  atan3_9FIHpp9F.cpp  atan3_9FIHpp9F.h  mod_ThuC9Kor.h  norm_7i8u8z8R.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_atan2f_snf.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  zero_crossing_types.h
src/formation/src/lib/Formation_FMS/: FMS.h
src/formation/src/lib/Formation_FMS/src/: Formation_FMS.cpp  Formation_FMS.h  Formation_FMS_private.h  Formation_FMS_types.h  rtGetInf.cpp  (+9 more)
src/formation/src/lib/geo/: CMakeLists.txt  geo.h
src/formation/src/lib/mathlib/: CMakeLists.txt
src/formation/src/lib/matrix/: helper_functions.hpp
src/formation/src/model/FMS_TECS/: CMakeLists.txt  FMS.h
(+40 files in other folders)
